k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: to-do
  labels:
    app: to-do
