k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-do
  namespace: to-do
  labels:
    app: to-do
spec:
  replicas: 2
  selector:
    matchLabels:
      app: to-do
  template:
    metadata:
      labels:
        app: to-do
    spec:
      serviceAccountName: to-do-sa
      containers:
        - name: to-do
          image: neelitaliya/to-do:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "128m"
              memory: "128Mi"
            limits:
              cpu: "256m"
              memory: "256Mi"
