k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: to-do-svc
  namespace: to-do
  labels:
    app: to-do
spec:
  type: ClusterIP
  selector:
    app: to-do
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
